--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up build environment
-      run: sudo apt-get install -y build-essential libgtest-dev
+      run: sudo apt-get install -y build-essential libsfml-dev libgtest-dev
       
     - name: Build project
       run: make
