--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,17 +9,16 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
-    - name: Set up build environment (1 step)
-      run: sudo apt-get update
-
-    - name: Set up build environment (2 step)
-      run: sudo apt-get install -y build-essential libsfml-dev libgtest-dev
+    - name: Install dependencies
+      run: |
+        brew update
+        brew install googletest sfml
       
     - name: Build project
       run: make
